# llm-learn

./: .gitignore  README.md  pyproject.toml  run-server.sh
openai/: demo_1.py  demo_2.py  function_call.py  res_struct_format.py  stream.py
p1/: prompt.ipynb
server/: get_web_content.py  main.py
tool/: __init__.py  dotenv.py  get_completion.py
